# trailmaps.app-map-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
assets/extras/: generate_clip_arrow.py
configs/example/: example-minimal.yaml  example.yaml  reference-minimal.yaml  reference.yaml
configs/reference/: reference-minimal.yaml  reference.yaml
docs/: building.md  configuration.md  deployment.md  elevation.md  event-mode.md  examples.md  osm-mapping.md  troubleshooting.md
map_generator/: __main__.py
scripts/: build.py  cache_signatures.py  clean_config.py  cli.py  colors.py  compare_elevation_sources.py  compute_route_stats.py  config_io.py  console.py  corridor_baselines.py  enrichment.py  event_mode.py  fetch_basemap.py  fetch_pois.py  fetch_terrain.py  fetch_trails.py  font_trimmer.py  generate_icons.py  geodesy.py  inject_clip_arrow.py  logo.py  osm_parser.py  overpass.py  parallel_routes.py  pmtiles_util.py  route_order.py  serve.py  template_inject.py  validate_config.py
scripts/tests/: test_build_smoke.py  test_clean_config.py  test_colors.py  test_compute_route_stats.py  test_config_hardening.py  test_corridor_baselines.py  test_enrichment.py  test_generate_icons.py  test_route_order.py  test_title_and_welcome.py  test_validate_config.py
templates/: app.js  index.html  style.css  sw.js
tools/: README.md  build_and_deploy.sh  clean_config.py  list_relations.py
